# rl_diff_drive

./: README.md  config.py  main.py  pyproject.toml
configs/ppo/: default.yaml  fast.yaml  improved.yaml  precision.yaml  robust.yaml
configs/sac/: default.yaml
configs/td3/: default.yaml
logs/ppo/ppo_improved/: evaluations.npz
logs/sac/sac_default/: evaluations.npz
logs/td3/td3_td3_default/: evaluations.npz
models/ppo/ppo_improved/: config.yaml  training_log.npz
models/sac/sac_default/: config.yaml  training_log.npz
models/td3/td3_td3_default/: config.yaml  training_log.npz
reports/: report.md
scripts/: record_gif_after_training.py
src/: __init__.py  environment.py  evaluate.py  train.py  visualize.py
src/models/: ppo_model.py  sac_model.py  td3_model.py
src/trainers/: __init__.py  base_trainer.py  ppo_trainer.py  sac_trainer.py  td3_trainer.py
