[project]
name = "rl-bonus-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.2.3",
    "pygame>=2.6.1",
    "stable-baselines3>=2.7.1",
    "numpy>=1.26.0",
    "torch>=2.11.0",
    "matplotlib>=3.10.8",
    "tensorboard>=2.17.0",
    "pyyaml>=6.0",
    "imageio>=2.37.3",
    "imageio-ffmpeg>=0.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]